samples/_failures_safe/1761290422_a98d58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_363831a3.c: In function ‘main’:
./samples/SAFE/__tmp_363831a3.c:157:13: error: expected declaration or statement at end of input
  157 |             printf("Invalid input '%c' at position %zu\n", c, i);
      |             ^~~~~~
./samples/SAFE/__tmp_363831a3.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_363831a3.c:157:13: error: expected declaration or statement at end of input
